Refactor messages for commands