@@ -1,10 +1,10 @@
 package seedu.tuitione.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static seedu.tuitione.commons.core.Messages.MESSAGE_PLURAL_STUDENT_LISTED_OVERVIEW;
-import static seedu.tuitione.commons.core.Messages.MESSAGE_SINGULAR_STUDENT_LISTED_OVERVIEW;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static seedu.tuitione.commons.core.Messages.HEADER_UPDATE;
+import static seedu.tuitione.commons.core.Messages.MESSAGE_NO_STUDENTS_FOUND_OVERVIEW;
+import static seedu.tuitione.commons.core.Messages.MESSAGE_STUDENTS_FOUND_OVERVIEW;
 import static seedu.tuitione.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.tuitione.testutil.TypicalStudents.CARL;
 import static seedu.tuitione.testutil.TypicalStudents.ELLE;
@@ -13,6 +13,7 @@ import static seedu.tuitione.testutil.TypicalStudents.getTypicalTuitione;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -25,8 +26,9 @@ import seedu.tuitione.model.student.NameContainsKeywordsPredicate;
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private Model model = new ModelManager(getTypicalTuitione(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalTuitione(), new UserPrefs());
+
+    private final Model model = new ModelManager(getTypicalTuitione(), new UserPrefs());
+    private final Model expectedModel = new ModelManager(getTypicalTuitione(), new UserPrefs());
 
     @Test
     public void equals() {
@@ -39,25 +41,25 @@ public class FindCommandTest {
         FindCommand findSecondCommand = new FindCommand(secondPredicate);
 
         // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        assertEquals(findFirstCommand, findFirstCommand);
 
         // same values -> returns true
         FindCommand findFirstCommandCopy = new FindCommand(firstPredicate);
-        assertTrue(findFirstCommand.equals(findFirstCommandCopy));
+        assertEquals(findFirstCommand, findFirstCommandCopy);
 
         // different types -> returns false
-        assertFalse(findFirstCommand.equals(1));
+        assertNotEquals(1, findFirstCommand);
 
         // null -> returns false
-        assertFalse(findFirstCommand.equals(null));
+        assertNotEquals(null, findFirstCommand);
 
         // different student -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
+        assertNotEquals(findFirstCommand, findSecondCommand);
     }
 
     @Test
     public void execute_zeroKeywords_noStudentFound() {
-        String expectedMessage = String.format(MESSAGE_SINGULAR_STUDENT_LISTED_OVERVIEW, 0);
+        String expectedMessage = HEADER_UPDATE + MESSAGE_NO_STUDENTS_FOUND_OVERVIEW;
         NameContainsKeywordsPredicate predicate = preparePredicate(" ");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredStudentList(predicate);
@@ -67,17 +69,17 @@ public class FindCommandTest {
 
     @Test
     public void execute_oneKeyword_oneStudentFound() {
-        String expectedMessage = String.format(MESSAGE_SINGULAR_STUDENT_LISTED_OVERVIEW, 1);
+        String expectedMessage = HEADER_UPDATE + String.format(MESSAGE_STUDENTS_FOUND_OVERVIEW, 1);
         NameContainsKeywordsPredicate predicate = preparePredicate("Kurz");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredStudentList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL), model.getFilteredStudentList());
+        assertEquals(List.of(CARL), model.getFilteredStudentList());
     }
 
     @Test
     public void execute_multipleKeywords_multipleStudentsFound() {
-        String expectedMessage = String.format(MESSAGE_PLURAL_STUDENT_LISTED_OVERVIEW, 3);
+        String expectedMessage = HEADER_UPDATE + String.format(MESSAGE_STUDENTS_FOUND_OVERVIEW, 3);
         NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredStudentList(predicate);
